[metadata]
name = django-process-admin-rest-api
version = 0.1
description = The Django Rest API for a generic process-oriented admin.
long_description = file: README.rst
url = https://www.example.com/
author = Maximilian Lund GmbH
author_email = s.mair@lund-it.com
license =
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: